# cmd/morsel-ctrl-plane/internal/api/oas/openapi.yaml
@@ -53,6 +53,12 @@ components:
       $ref: './schemas/CreateTierReq.yaml'
     UpdateTierReq:
       $ref: './schemas/UpdateTierReq.yaml'
+    AppExemptionReq:
+      $ref: './schemas/AppExemptionReq.yaml'
+    RepoExemptionReq:
+      $ref: './schemas/RepoExemptionReq.yaml'
+    ExemptionList:
+      $ref: './schemas/ExemptionList.yaml'
 
   parameters:
     OrgParam:
@@ -180,3 +186,18 @@ paths:
 
   '/api/operator/tiers/{name}/set-default':
     $ref: './paths/operator-tiers-name-set-default.yaml'
+
+  /api/operator/app-exemptions:
+    $ref: './paths/operator-app-exemptions.yaml'
+
+  '/api/operator/app-exemptions/{org}/{repo}/{name}':
+    $ref: './paths/operator-app-exemptions-org-repo-name.yaml'
+
+  /api/operator/repo-exemptions:
+    $ref: './paths/operator-repo-exemptions.yaml'
+
+  '/api/operator/repo-exemptions/{org}/{repo}':
+    $ref: './paths/operator-repo-exemptions-org-repo.yaml'
+
+  /api/operator/exemptions:
+    $ref: './paths/operator-exemptions.yaml'
